--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,11 +268,17 @@ pre code.hljs {
 			}
 		}
 	}
+
+	.key-services {
+		text-align: center;
+	)
+	
 	img {
 		display: block;
 		margin: auto;
 		width: 90%;
 	}
+
 	/*
 	*	Posts
 	*/
