--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -36,11 +36,12 @@ $red:	#c0392b;				// Pomegranate
 $gray: #7f8c8d;				// Asbestos
 // Even more colors
 $bc-red: #bc0000;
+$orangeyy: #F15812
 
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: #F15812;
+$action-color: #e74c3c;
 $highlight-color: tint($action-color, 33%);
 
 // Border
