--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -36,7 +36,7 @@ $red:	#c0392b;				// Pomegranate
 $gray: #7f8c8d;				// Asbestos
 // Even more colors
 $bc-red: #bc0000;
-$orangeyy: #F15812
+$orangeyy: #F15812;
 
 // Font Colors
 $base-background-color: #fff;
